# quill-zkvm

./: Cargo.toml  LICENSE  README.md
hyperplonk/: Cargo.toml
hyperplonk/src/: lib.rs
hyperplonk/src/circuit/: mod.rs  proof.rs  transition_circuit.rs
hyperplonk/src/frontend/: transition_circuit.rs
hyperplonk/src/piops/: lookup.rs  mod.rs  multiset_check.rs  permutation_check.rs  set_inclusion.rs  sumcheck.rs  zerocheck.rs
hyperplonk/src/proof/: circuit.rs  mod.rs  proof.rs
hyperplonk/src/utils/: eq_eval.rs  fast_eq_eval.rs  mod.rs  virtual_polynomial.rs
hyperplonk/tests/: test_basic_proof.rs
pcs/: Cargo.toml
pcs/src/: ipa.rs  kzg.rs  lib.rs  mlpcs.rs
transcript/: Cargo.toml
transcript/src/: transcript.rs
