[package]
name = "quill_hyperplonk"
version.workspace = true
edition.workspace = true

[dependencies]
"ark-poly" = "0.5.0"
"ark-ff" = "0.5.0"
"ark-bn254" = "0.5.0"
"ark-std" = "0.5.0"
"ark-ec" = "0.5.0"
"ark-serialize" = "0.5.0"
"quill_transcript" = { path = "../transcript" }
"quill_pcs" = { path = "../pcs" }